alignments fixed, updated, code optimized

--- a/mainstyle.css
+++ b/mainstyle.css
@@ -1,5 +1,5 @@
 *{
-    margin: 0;
+
     font-family: poppins,Arial, Helvetica, sans-serif;  
     color: #343434;
 }
@@ -21,12 +21,7 @@
      background-color: #eff2ff; 
      min-height: 100%;
  }
-
-.row{
-    margin-left: 0.8;
-}
-
-
+ 
 
 /* navigation bar */
 .navbg{
@@ -60,8 +55,7 @@
 
 .navtabs{
     list-style-type: none;
-    width: 100%;
-    margin-left: -2em;
+    margin-left: -5em;
     margin-top: 1em;
     display: flex;
     justify-content: center;
@@ -71,17 +65,16 @@
 
 /* intro (name, designation, image, contacts) */
 #intro-section{
-    padding-top: 5em;
+margin-bottom: 5em;
 }
 
 .intro{
     padding-top: 10em;
 }
 
-
 .intro-img{
-width: 22em;
-padding-top: 6em;
+    padding-top: 10em;
+    width: 22em;
 }
 
 .text-1{
@@ -142,9 +135,8 @@ padding-top: 6em;
     font-style: italic;
     display:flex;
     justify-content: center;
-    margin-top: 4em;
+    margin-top: 3em;
     font-weight: bolder;
-    margin-left: 0.7em;
 }
 
 .top{
@@ -163,8 +155,7 @@ padding-top: 6em;
     height: 8em;
     border-radius: 1em;
     background-color: #fafbff;
-    margin-top: 2em;
-    margin-left: 2em;
+    margin:1em;
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -173,7 +164,7 @@ padding-top: 6em;
 
 .skill-name{
     font-size:large;
-    font-weight: bold;
+    font-weight:bold;
     color:#343434;
     margin-top: 1em;
 }
@@ -189,24 +180,13 @@ padding-top: 6em;
 
 /* projects */
 
-.project-section{
-    width: 95vw;
-    display: flex;
-    justify-content: center;
-}
 .project-box{
-    height: 30em;
+    height: em;
     width: 20em;
     background-color: #fafbff;
     border-radius: 0.6em;
-    margin-left: 5em;
+    margin: 1em;
     margin-top: 2em;
-}
-
-.project-namespace{
-    margin: 0.3em;
-    width: 18em;
-    height: 2.5em;
 }
 
 .project-name{
@@ -235,6 +215,7 @@ padding-top: 6em;
     margin: 0.6em;
     margin-top: -0.3em;
     width: 19em;
+    height: 2em;
 }
 
 .view{
@@ -249,32 +230,25 @@ padding-top: 6em;
     border-radius: 4px;
     width: 8em;
     height: 2em;
-    margin: 0.6em;
-    margin-top: 0.3em;
+    margin: 0.5em;
 }
 
 .github-repo{
     width: 10em;
     height: 2em;
-    margin-left: 2em;
+    padding: 0.7em;
+    margin-left: 1.6em;
 }
 
 .source-code{
     font-size:medium;
-    margin: 1.1em;
     width: 10em;
     height: 2em;
     font-size: small;
 }
 
 
-
-
 /* contact form */
-.contact-sec{
-    width: 50vh;
-
-}
 
 .icon-info{
     margin-left:1em;
@@ -296,7 +270,9 @@ padding-top: 6em;
 }
 
 .apps{
- margin: 1em;
+    margin-top: 1em;
+    display: flex;
+    justify-content: space-between;
 }
 
 .app-links{
@@ -304,41 +280,31 @@ padding-top: 6em;
     height: 5em;
     background-color: #ffffff;
     float: left;
-    margin: 0.8em;
+    
     border-radius: 0.3em;
-
 }
 
 .contact-form-sec{
-    width: 50vh;
-    margin-top: 2em;
-
     color: #000;
+    margin-top: 0.6em;
 }
 
-.form-box-name{
+.form-box-name,.form-box-email{
     margin: 0.3em;
     height: 3em;
     border-radius: 0.3em;
-
     border: transparent;
+    padding-left: 1em;
 }
 
-.form-box-email{
-    margin: 0.3em;
-    height: 3em;
-    border-radius: 0.3em;
-
-    border: transparent;
-}
 
 #message{
     margin: 0.3em;
     border-radius: 0.3em;
-
     padding-top: 0.5em;
     height: 8em;
     border: transparent;
+    padding-left: 1em;
 }
 
 .form-submit{
@@ -347,7 +313,6 @@ padding-top: 6em;
     color: #066180;
     font-size: small;
     border-radius: 0.4em;
-
     border: transparent;
     box-shadow: 2px 2px 10px 0px #a3cbd9;
 }
@@ -356,7 +321,6 @@ padding-top: 6em;
     font-family: Marck Script;
     width: 100%;
     height: 2em;
-
     display: flex;
     justify-content: center;
     font-size: x-large;
